stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_record_field_type_mismatch.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/record_field_type_mismatch.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × record field type mismatch
   ╭─[tests/fixtures/diagnostics/types/record_field_type_mismatch.ml:4:18]
 3 │ fn main() {
 4 │   dbg(point { x: "left", y: 2 })
   ·                  ───┬──
   ·                     ╰── field `x` expects `i64`, but this value has type `String`
 5 │ }
   ╰────
  help: provide a value with the declared field type
